[gd_scene load_steps=5 format=2]

[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=1]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Proyectiles/ProyectilPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/Naves/Player/Sonidos/impacto.ogg" type="AudioStream" id=6]

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 2147483648
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 1 )
hitpoints = 100.0

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.62939e-06, 0.314972 )

[node name="Canion" parent="." instance=ExtResource( 2 )]
position = Vector2( 1.124, 0 )
proyectil = ExtResource( 3 )
danio_proyectil = 8

[node name="ImpactoSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -12.077
bus = "SFX"
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
